updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer and I am excited to begin this new career!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Texas. Through and through...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy staying healthy and making music with others.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would love to build a connection between my new and previous professions. I would like to develop tools that enhance teaching and create efficiency tools for teachers.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Lewisville in our wonderful home that we bought nearly a year ago. :-)</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to find ways to help people connect to one another online and beyond.</p>
     </section>
 
     <footer id="footer">
